# type_theory

./: CMakeLists.txt
source/: hw1.cpp  lambda_parser.cpp  lambda_parser.h  main.cpp  test.cpp
tests/: task1_in.txt
